# BNC

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  INDEXER_ENV_FIX.md  LICENSE  RACE_CONDITION_FIX.md  README.md  SECURITY.md  docker-compose.yml  task1.md
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  contracts-ci.yml  deploy-testnet.yml  e2e-soroban.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  INDEX_OPTIMIZATION.md  QUICK_START_INDEXES.md  jest.config.json  package-lock.json  package.json  tsconfig.json
backend/db/: schema.sql
backend/migrations/: 1715760000000_add-lock-before-secs.js  1717560000000_add-disputes-table.js  1720000000000_add-password-reset-tokens.js  1720086000000_add-users-table.js  1721000000000_add-bets-composite-index.js  1722000000000_add-admin-audit-log.js
backend/scripts/: migration-check.js  verify-schema.js  (+2 more)
contracts/: AMM_DOCUMENTATION.md  Cargo.toml
contracts/market/: Cargo.toml
contracts/market/src/: lib.rs  tests.rs
contracts/market_factory/: Cargo.toml
contracts/market_factory/src/: lib.rs
contracts/scripts/: deploy.sh
contracts/shared/: Cargo.toml
contracts/shared/src/: amm.rs  errors.rs  events.rs  types.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
docs/: ERROR_CODES.md  GETTING_STARTED.md  contributing.md  runbook.md  websocket-authentication.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  playwright.config.ts
indexer/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
(+98 files in other folders)
