[package]
name    = "boxmeout-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "26.1.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
